End Tigrinya faqpage.17question with "?", Prevent middle name label wrapping

--- a/src/styles/override/styles.scss
+++ b/src/styles/override/styles.scss
@@ -155,6 +155,14 @@ dl.faq button {
     left:auto !important;
   }
 
+  #MiddleName-label {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 99%;
+    height: 100%;
+  }
+
   .SpanText-Bold-With-Indent {
     font-weight: bold;
     padding-left: 6px;
